--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.13.3",
     "request": "^2.83.0",
     "socket.io": "^1.3.7",
+    "urldecode": "^1.0.1",
     "windows-1252": "^1.0.0"
   },
   "devDependencies": {}
